--- a/Manage-Landing/styles/main.css
+++ b/Manage-Landing/styles/main.css
@@ -1,9 +1,124 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
+  overflow-x: hidden;
+  overflow-wrap: break-word;
   font-family: 'Be Vietnam', sans-serif;
+  width: 100vw;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+}
+
+.right-bar {
+  margin-top: 10vh;
+}
+
+.onebar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.pill {
+  text-align: center;
+  background-color: #f25f3a;
+  padding: 1vh 2vw;
+  margin-right: 3vw;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 20px;
+}
+
+.pill h2 {
+  text-align: center;
+}
+
+.testimonial-content {
+  margin-bottom: 20px;
+}
+
+.toast {
+  float: right;
+  opacity: 30%;
+}
+
+.testimonial {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 4fr;
+      grid-template-columns: 1fr 4fr;
+}
+
+.blob-img {
+  height: 85vh;
+  width: 45vw;
+  position: relative;
+}
+
+.nav-blob {
+  width: 112vw;
+  height: 110vh;
+  position: absolute;
+  z-index: -1;
+  right: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.left {
+  height: 70vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.home-header {
+  font-size: 3rem;
+  line-height: 1.3;
+  max-lines: 4;
+  margin-bottom: 5px;
+}
+
+.home-description {
+  font-size: 0.8rem;
+  max-width: 30vw;
+  text-align: left;
+  font-weight: 200;
+  color: black;
+  opacity: 70%;
+  line-height: 1.9;
+  margin-bottom: 30px;
 }
 
 .body {
   padding: 2% 10%;
+}
+
+.mobile-nav {
+  display: none;
 }
 
 .nav-bar {
@@ -45,5 +160,75 @@ body {
   -webkit-box-shadow: -1px 5px 7px rgba(242, 95, 58, 0.548);
           box-shadow: -1px 5px 7px rgba(242, 95, 58, 0.548);
   background-color: #f25f3a;
+}
+
+.home {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+  .blob-img {
+    height: 90vw;
+    width: 50vh;
+  }
+  .nav-blob {
+    width: 115vw;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    top: 1;
+    position: absolute;
+    z-index: -1;
+    right: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  .nav-bar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .nav-links {
+    display: none;
+  }
+  .links {
+    display: none;
+  }
+  .get-started-button {
+    display: none;
+  }
+  .mobile-nav {
+    position: relative;
+    margin-bottom: 10px;
+    display: inline-block;
+    border: 0.001px solid rgba(128, 128, 128, 0.411);
+    border-radius: 2px;
+  }
+  .mobile-nav:hover {
+    border: 0.001px solid rgba(0, 0, 0, 0.377);
+  }
+  .fa-bars {
+    padding: 6px;
+  }
+  .home {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .home-header {
+    font-size: 1rem;
+  }
 }
 /*# sourceMappingURL=main.css.map */
