--- a/Manage-Landing/styles/main.scss
+++ b/Manage-Landing/styles/main.scss
@@ -1,9 +1,97 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 body{
+    overflow-x: hidden;
+    overflow-wrap: break-word;
     font-family: 'Be Vietnam', sans-serif;
+    width: 100vw;
+    height: max-content;
+   
+}
+.right-bar{
+    margin-top: 10vh;
+    
 }
 
+.onebar{
+    display: flex;
+    justify-content: center;
+}
+
+
+.pill{
+    text-align: center;
+    background-color: hsl(12, 88%, 59%);
+    padding: 1vh 2vw;
+    margin-right: 3vw;
+    color: white;
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+}
+.pill h2{
+    text-align: center;
+}
+.testimonial-content{
+    margin-bottom: 20px;
+}
+.toast{
+    float: right;
+    opacity: 30%;
+}
+.testimonial{
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+}
+
+.blob-img{
+    height: 85vh;
+    width: 45vw;
+    position: relative;
+}
+.nav-blob{
+    width: 112vw;
+    height: 110vh;
+    
+    position: absolute;
+    z-index: -1;
+    
+    right: 1;
+    display: flex;
+    justify-content: flex-end;
+    
+}
+.left{
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.home-header{
+    font-size: 3rem;
+    line-height: 1.3;
+    max-lines: 4;
+    margin-bottom: 5px;
+}
+.home-description{
+    font-size: 0.8rem;
+    max-width: 30vw;
+    text-align: left;
+    font-weight: 200;
+    color: black;
+    opacity: 70%;
+    line-height: 1.9;
+    margin-bottom: 30px;
+}
 .body{
+    
     padding: 2% 10%;
+    
+}
+.mobile-nav{
+    display: none;
 }
 
 .nav-bar{
@@ -36,4 +124,75 @@ body{
     border-radius: 20px;
     box-shadow: -1px 5px 7px hsla(12, 88%, 59%, 0.548);
     background-color: hsl(12, 88%, 59%);
+}
+
+.home{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+
+@media only screen and (min-device-width: 320px) 
+and (max-device-width: 480px)
+and (-webkit-min-device-pixel-ratio: 2)
+and (orientation: portrait){
+    .blob-img{
+        height: 90vw;
+        width: 50vh;
+        
+        
+        
+    }
+    .nav-blob{
+        width: 115vw;
+        height: fit-content;
+        top: 1;
+        position: absolute;
+        z-index: -1;
+        
+        right: 1;
+        display: flex;
+        justify-content: flex-end;
+        
+    }
+    
+    
+    .nav-bar{
+        
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .nav-links{
+        display: none;
+    }
+    .links{
+        display: none;
+    }
+    .get-started-button{
+        display: none;
+    }
+    .mobile-nav{
+        position: relative;
+        margin-bottom: 10px;
+        display: inline-block;
+        border: 0.001px solid rgba(128, 128, 128, 0.411);
+        border-radius: 2px;
+        &:hover{
+            border: 0.001px solid rgba(0, 0, 0, 0.377);
+            
+
+        }
+    }
+    .fa-bars{
+        padding: 6px;
+        
+    }
+    .home{
+        grid-template-columns: 1fr;
+    }
+    .home-header{
+        font-size: 1rem;
+        
+    }
 }
